fix: button and headings spacing bugs (#89)
* fix gap between icons and text in buttons

* fix upper margin on headings in blog posts

* wip docs layout adjustment for mobile

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -262,9 +262,9 @@ h5,
 h6 {
   font-family: var(--display-font);
   color: var(--headings-color);
+  font-weight: 500;
   margin-top: 0;
-  margin-block-start: 0;
-  font-weight: 500; }
+  margin-block-start: 0; }
 
 .post-main h2,
 .docs-main h2, .post-main
@@ -1101,7 +1101,7 @@ ul.tag-list {
   @media all and (min-width: 1023px) {
     .docs-wrapper {
       display: grid;
-      grid-template-columns: minmax(350px, 1fr) minmax(0, 3fr);
+      grid-template-columns: minmax(300px, 1fr) minmax(0, 3fr);
       grid-gap: 2rem;
       align-items: stretch; } }
 
@@ -1122,10 +1122,12 @@ ul.tag-list {
 
 .docs-content {
   padding: calc(2rem + 1vw) 0;
-  grid-column: 2 / 3;
-  display: grid;
-  grid-template-columns: minmax(0, 3fr) minmax(240px, 1fr);
-  grid-gap: 4rem; }
+  grid-column: 2 / 3; }
+  @media all and (min-width: 800px) {
+    .docs-content {
+      display: grid;
+      grid-template-columns: minmax(0, 3fr) minmax(230px, 1fr);
+      grid-gap: 4rem; } }
 
 .docs-main {
   padding-top: var(--space-l-xl);
@@ -1197,7 +1199,11 @@ button {
   width: 100%; }
 
 a.c-btn {
-  text-decoration: none; }
+  text-decoration: none;
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: .5rem;
+  align-items: center; }
 
 .c-btn--primary {
   background-color: var(--primary-button-background-color);
@@ -2692,6 +2698,8 @@ a.rule__name {
   justify-content: space-between;
   align-items: center;
   padding: .5rem .75rem;
+  margin-left: -.75rem;
+  margin-inline-start: -.75rem;
   color: var(--headings-color); }
   .docs-index a:hover, .docs-index a[aria-current="true"] {
     background-color: var(--docs-lightest-background-color);
