--- a/src/assets/css/components/buttons.css
+++ b/src/assets/css/components/buttons.css
@@ -34,7 +34,11 @@ button {
   width: 100%; }
 
 a.c-btn {
-  text-decoration: none; }
+  text-decoration: none;
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: .5rem;
+  align-items: center; }
 
 .c-btn--primary {
   background-color: var(--primary-button-background-color);
